Don't pass (int)-1 to KateTextLine::stringAtPos(), it chokes on that. This is fixed in KDE4 Kate, where all unsigned ints are made signed.

BUG: 130619

svn path=/branches/KDE/3.5/kdelibs/; revision=561299